<resources>
    <string name="app_name">Quiz App Details</string>
    <string name="enter_your_name">Enter your name.....</string>
    <string name="get_started">Get started</string>
    <string name="welcome_to_learnen">Welcome to Learnen</string>
    <string name="improve_your_skills_for_a_brighter_future">Improve your skills for a brighter future.</string>
    <string name="quiz_image">Quiz Image</string>
    <string name="which_city_in_ukraine_has_the_biggest_port">Which city in Ukraine has the biggest port?</string>
    <string name="mariopol">Mariopol</string>
    <string name="lyiv">Lyiv</string>
    <string name="submit">Submit</string>
    <string name="kyiv">Kyiv</string>
    <string name="_0_9">0/9</string>
    <string name="question_0_9">Question 0 / 9</string>
    <string name="do_you_feel_confident">Do you feel confident? You can always challenge yourself to do better and get better with our ever growing questions.</string>
    <string name="sign_up" />
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_back">Welcome back</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="forget_your_password">Forgot Your Password</string>
    <string name="login">Login In</string>
</resources>