<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:background="@drawable/entry_page"
            android:layout_gravity="center">

        </ImageView>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_marginTop="5dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/welcome_to_learnen"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/improve_your_skills_for_a_brighter_future"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="normal"
            android:layout_marginBottom="20dp">

        </TextView>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="vertical"
        android:gravity="center"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username"
                android:textColor="@color/black"
                android:textColorHint="@color/lightBlue"
                android:inputType="textCapWords">

            </androidx.appcompat.widget.AppCompatEditText>

        </com.google.android.material.textfield.TextInputLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        >

        <Button
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:background="@drawable/rounded_edges"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/get_started"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:shadowColor="@color/black"
            android:layout_marginTop="20dp"
            >

        </Button>

    </LinearLayout>


</LinearLayout>